--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@polkadot/api": "^6.8.1",
     "axios": "^0.24.0",
+    "bn.js": "^5.2.0",
     "cache": "^2.3.1",
     "make-synchronous": "^1.0.0"
   }
