--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@polkadot/api": "^6.8.1",
     "axios": "^0.24.0",
-    "bn.js": "^5.2.0",
     "cache": "^2.3.1",
+    "dotenv": "^10.0.0",
     "make-synchronous": "^1.0.0"
   }
 }
